--- a/style.css
+++ b/style.css
@@ -13,8 +13,14 @@ table {
     text-align: left;
   }
   th {
-    background-color: #818181;
+    background-color: rgb(11, 75, 75);
   }
   hr{
-    border: 3px solid #818181 ;
+    border: 2px solid rgb(60, 63, 12) ;
+  }
+  h1{
+    color: rgb(39, 119, 119);
+  }
+  #t{
+    color: bisque;
   }
